namespace FeedBack.Core.Models
{
    /// <summary>
    /// User role enum
    /// </summary>
    public enum Role
    {
        Administrator = 0,
        User,
        Reviewer,
        Editor
    }
}