namespace FeedBack.Core.Models
{
    /// <summary>
    /// Team roles enum
    /// </summary>
    public enum TeamRole
    {
        Developer = 0,
        Analytic,
        ManualTester,
        AutomationTester,
        ProductOwner,
        ScrumMaster,
        TechnicalLead,
        TeamLead,
        ProjectManager,
        Chief
    }
}